rewriting app structure

--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,8 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-beans', version: '5.2.1.RELEASE'
     // https://mvnrepository.com/artifact/org.springframework/spring-context
     compile group: 'org.springframework', name: 'spring-context', version: '5.2.1.RELEASE'
+    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 }
