--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
 }
