--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,7 @@ dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.4.RELEASE'
     compileOnly 'org.projectlombok:lombok:1.18.10'
 }
