--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-databaseUrl=jdbc:h2:~/test
-databaseLogin=sa
-databasePass=
+spring.datasource.url              =jdbc:h2:~/test
+spring.datasource.username         =sa
+spring.datasource.password         =
+spring.datasource.driver-class-name=org.h2.Driver
